<resources>
    <string name="app_name">Média Escolar</string>
    <string name="action_sair">Sair</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sair">Sair</string>

    <!--    content_bimestres-->
    <string name="media_escolar">Média Escolar</string>
    <string name="materia">Matéria</string>
    <string name="nota_da_prova">Nota da Prova</string>
    <string name="nota_trabalho">Nota Trabalho</string>
    <string name="hint_materia">Matéria</string>
    <string name="m_dia">Média</string>
    <string name="situcao">Situação</string>
    <string name="calcular">CALCULAR</string>
    <!--content main -->
    <string name="primeiro_bimestre">1º Bimestre</string>
    <string name="segundo_bimestre">2º Bimestre</string>
    <string name="terceiro_bimestre">3º Bimestre</string>
    <string name="quarto_bimestre">4º Bimestre</string>
    <string name="resultado_final">Resultado Final</string>
    <string name="media">Média</string>
    <string name="navigation_drawer_open">navigation drawer open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>

</resources>